<resources>
    <string name="app_name">Independence Day Special</string>
    <string name="wish">Happy Independence Day!</string>

    <string name="attract">True independence and freedom can only exist in doing what\'s right.
        \n              ~Brigham Young
    \nFor more, click below link.</string>

    <string name="link">https://en.wikipedia.org/wiki/Independence_Day_(India)</string>
    <string name="body">Independence Day is annually celebrated on 15 August, as a national holiday in India commemorating
        the nation\'s independence from the United Kingdom on 15 August 1947, the UK Parliament passed the Indian Independence Act 1947
        transferring legislative sovereignty to the Indian Constituent Assembly.
        \n \nIndia still retained King George VI as head of state until its transition to full republican constitution.
        India attained independence following the Independence Movement noted for largely non-violent resistance and civil disobedience
        led by the Indian National Congress (INC).
        \n \nIndependence coincided with the partition of India, in which the British India was divided along religious lines
        into the Dominions of India and Pakistan; the partition was accompanied by violent riots and mass casualties,
        and the displacement of nearly 15 million people due to religious violence.
        \n \nOn 15 August 1947, the first Prime Minister of India, Jawaharlal Nehru raised the Indian national flag above the Lahori Gate of the Red Fort in Delhi.
        On each subsequent Independence Day, the incumbent Prime Minister customarily raises the flag and gives an address to the nation.\n</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
</resources>
