<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndependentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/orange" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo4"
                android:scaleType="centerCrop"
                android:src="@drawable/white" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo3"
                android:scaleType="center"
                android:src="@drawable/chakra" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo2"
            android:scaleType="centerCrop"
            android:src="@drawable/green" />

    </LinearLayout>

    <TextView
        android:id="@+id/wish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/wish"
        android:textColor="#000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_below="@id/wish"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/todo1"
        android:scaleType="centerCrop"
        android:src="@drawable/india" />

    <ScrollView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_below="@id/image">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/body"
            android:textColor="#4A148C" />

    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history"
        android:layout_margin="10dp"
        android:text="@string/attract"
        android:textColor="#004D40" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:autoLink="web"
        android:gravity="center"
        android:text="@string/link"
        android:textColor="#000"
        android:textSize="14sp" />

</RelativeLayout>